--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "my-v0-project",
+  "name": "traya-form",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "prisma generate && prisma migrate deploy && pnpm db:seed && next build",
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start",
+    "postinstall": "prisma generate",
     "db:seed": "tsx prisma/seed.ts",
     "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio"
   },
@@ -66,7 +68,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "3.25.76",
-    "@prisma/client": "^6.2.1"
+    "@prisma/client": "^6.2.1",
+    "tsx": "^4.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
@@ -77,7 +80,6 @@
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5.7.0",
-    "prisma": "^6.2.1",
-    "tsx": "^4.7.0"
+    "prisma": "^6.2.1"
   }
 }
